--- a/Code/0 - Formatage donnees.ipynb
+++ b/Code/0 - Formatage donnees.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Importation des données"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +14,18 @@
     "import pickle\n",
     "\n",
     "#os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
-    "#os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres')\n",
+    "os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp')\n",
     "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
-    "os.chdir('/home/aqlt/Documents/Ensae/StatApp')"
+    "#os.chdir('/home/aqlt/Documents/Ensae/StatApp')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Base de tweets 2013-2017 \n",
+    "\n",
+    "## Importation des données"
    ]
   },
   {
@@ -367,6 +369,232 @@
     "print(\"Nombre de mots :\", len(words))\n",
     "print(\"Taille du vocabulaire :\", len(vocabulary))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bases de sentimental analysis (sncf et git)\n",
+    "\n",
+    "## La base \"github\"\n",
+    "\n",
+    "### Etape préalable en R\n",
+    "\n",
+    "Les bases initiales sont : \n",
+    "* tweets-train.csv (1 594 733 millions de tweets)\n",
+    "* tweets-test.csv (4000 tweets) \n",
+    "\n",
+    "On transforme ces bases en \n",
+    "* bdd-train.csv (1 594 410 millions de tweets)\n",
+    "* bdd-test.csv (3982 tweets)\n",
+    "\n",
+    "En gérant le séparateur , enlevant les (peu) de tweets \"pas bons (pas de sentiment). \n",
+    "\n",
+    "Le programme R de transformation est le suivant : traitement_base.R\n",
+    "\n",
+    "### En Python \n",
+    "\n",
+    "On transforme ces bases en \n",
+    "* corpus_train (50 000 tweets)\n",
+    "* corpus_test (3982 tweets)\n",
+    "\n",
+    "Ce qu'on fait surtout c'est de la mise en forme dans les fichiers corpus_test / corpus_train. \n",
+    "\n",
+    "Ce sont ces bases que nous utilisons pour les régressions logistiques. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = pd.read_csv(\"data/sentimental_analysis/bdd-test.csv\",sep=';/;',header=0,engine='python',encoding='UTF-8')\n",
+    "df_train = pd.read_csv(\"data/sentimental_analysis/bdd-train.csv\",sep=';/;',header=0,engine='python',encoding='UTF-8')\n",
+    "#print(df_train[0:1])\n",
+    "#print(df_test[0:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On traite la mise en forme comme dans notre corpus\n",
+    "def mise_en_forme_phrase (phrase):\n",
+    "    phrase = phrase.lower()\n",
+    "    # On enlève la ponctuation + certaines apostrophes\n",
+    "    phrase = phrase.translate(str.maketrans('', '', string.punctuation + \"'’«»—\"))\n",
+    "    # On enlève les passages à la ligne\n",
+    "    phrase = re.sub('\\\\n', ' ', phrase)\n",
+    "    # On enlève les tabulations\n",
+    "    phrase = re.sub('\\\\t', ' ', phrase)\n",
+    "    # On enlève les espaces multiples et les espaces à la fin des phrases\n",
+    "    phrase = re.sub(' +', ' ', phrase)\n",
+    "    phrase = re.sub(' +$', '', phrase)\n",
+    "    phrase = re.sub('^ +', '', phrase)\n",
+    "    # phrase.isalpha() # inutile\n",
+    "    return(phrase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_test = []\n",
+    "for ligne in df_test.itertuples():\n",
+    "    corpus_test.append([ligne.polarity,mise_en_forme_phrase(ligne.tweets)])\n",
+    "#corpus_test[0:2]\n",
+    "\n",
+    "corpus_train = []\n",
+    "for ligne in df_train.itertuples():\n",
+    "    corpus_train.append([ligne.polarity,mise_en_forme_phrase(ligne.tweets)])\n",
+    "#corpus_train[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_test_modif = [[-1 if score == 0 else 1,tweet] for score, tweet in corpus_test]\n",
+    "corpus_train_modif = [[-1 if score == '0' else 1,tweet] for score, tweet in corpus_train]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_pos = [[score,tweet] for score,tweet in corpus_train_modif if score == 1]\n",
+    "val_neg = [[score,tweet] for score,tweet in corpus_train_modif if score == -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from random import sample\n",
+    "random.seed(1)\n",
+    "val_pos_choix = sample(val_pos,25000)\n",
+    "val_neg_choix = sample(val_neg,25000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_train_total = val_pos_choix + val_neg_choix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enregistrement des bases \n",
+    "#with open(\"data/sentimental_analysis/corpus_train.file\", \"wb\") as f:\n",
+    "#    pickle.dump(corpus_train_total, f, pickle.HIGHEST_PROTOCOL)\n",
+    "#with open(\"data/sentimental_analysis/corpus_test.file\", \"wb\") as f:\n",
+    "#    pickle.dump(corpus_test_modif, f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La base SNCF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/sentimental_analysis/df_deft_sentiment.csv\",sep='|',header=0,engine='python',encoding='UTF-8')\n",
+    "df = df[['tag','tweet']]\n",
+    "df = df.loc[(pd.isnull(df[\"tweet\"]))==False,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = []\n",
+    "for ligne in df.itertuples():\n",
+    "    if ligne.tag != 0:\n",
+    "        corpus.append([ligne.tag,mise_en_forme_phrase(ligne.tweet)])\n",
+    "#corpus[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_modif = [[1 if score >= 1 else -1,tweet] for score, tweet in corpus]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_pos = [[score,tweet] for score,tweet in corpus_modif if score == 1]\n",
+    "val_neg = [[score,tweet] for score,tweet in corpus_modif if score == -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(1)\n",
+    "corpus_train_pos = sample(val_pos,round(0.7*len(val_pos)))\n",
+    "corpus_test_pos = sample(val_pos,round(0.3*len(val_pos)))\n",
+    "corpus_train_neg = sample(val_neg,round(0.7*len(val_neg)))\n",
+    "corpus_test_neg = sample(val_neg,round(0.3*len(val_neg)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_train_sncf = corpus_train_pos + corpus_train_neg\n",
+    "corpus_test_sncf = corpus_test_pos + corpus_test_neg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enregistrement des bases \n",
+    "#with open(\"data/sentimental_analysis/corpus_train_sncf.file\", \"wb\") as f:\n",
+    "#    pickle.dump(corpus_train_sncf, f, pickle.HIGHEST_PROTOCOL)\n",
+    "#with open(\"data/sentimental_analysis/corpus_test_sncf.file\", \"wb\") as f:\n",
+    "#    pickle.dump(corpus_test_sncf, f, pickle.HIGHEST_PROTOCOL)"
+   ]
   }
  ],
  "metadata": {
@@ -385,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
